more menu z-index fixes

--- a/changebyus/static/src/sass/style-merged.scss
+++ b/changebyus/static/src/sass/style-merged.scss
@@ -3066,14 +3066,18 @@ a.fileupload-exists {
     }
 }
 
+.cbu-avatar{
+    z-index: 2;
+}
 .header-links {
-    padding: 0 20px;
+    padding: 0 20px; 
     &:hover{
         background-color: $primaryActiveHoverColor;
     }
     &.active{
         background-color: $primaryActiveColor;
     }
+
 }
 
 
